# Collaborative-Graph-Coloring-Game

./: README.md  config.yaml  pyproject.toml
doc/: example.bib  main.tex  refs.bib
doc/sections/: abbreviations.tex  abstract.tex  acknowledgments.tex  conclusion.tex  conclusions.tex  formatting.tex  imagelist.tex  introduction.tex  literature-study.tex  references.tex  scientific-paper.tex  section1.tex  section2.tex  section3.tex  section4.tex  section5.tex  section6.tex  tablelist.tex
settings/learning/: h0.yaml  h1.yaml  r0.yaml  serene.yaml
settings/learning/human/: A.yaml  AE.yaml  AM.yaml  C.yaml  CA.yaml  CAE.yaml  CAM.yaml  CE.yaml  CL.yaml  CLE.yaml  CLM.yaml  CM.yaml  E.yaml  I.yaml  L.yaml  LE.yaml  LM.yaml  M.yaml  W.yaml  WA.yaml  WAE.yaml  WAM.yaml  WE.yaml  WL.yaml  WLE.yaml  WLM.yaml  WM.yaml
settings/simulation/: AE_x_A.yaml  AE_x_AE.yaml  AE_x_AM.yaml  AE_x_C.yaml  AE_x_CA.yaml  AE_x_CAE.yaml  AE_x_CAM.yaml  AE_x_CE.yaml  AE_x_CL.yaml  AE_x_CLE.yaml  AE_x_CLM.yaml  AE_x_CM.yaml  AE_x_E.yaml  AE_x_I.yaml  AE_x_L.yaml  AE_x_LE.yaml  AE_x_LM.yaml  AE_x_M.yaml  AE_x_W.yaml  AE_x_WA.yaml  AE_x_WAE.yaml  AE_x_WAM.yaml  AE_x_WE.yaml  AE_x_WL.yaml  AE_x_WLE.yaml  AE_x_WLM.yaml  AE_x_WM.yaml  AM_x_A.yaml  AM_x_AE.yaml  AM_x_AM.yaml  AM_x_C.yaml  AM_x_CA.yaml  AM_x_CAE.yaml  AM_x_CAM.yaml  AM_x_CE.yaml  AM_x_CL.yaml  AM_x_CLE.yaml  AM_x_CLM.yaml  AM_x_CM.yaml  AM_x_E.yaml  (+690 more)
src/: __init__.py  colors.py  designer.py  evaluator.py  game.py  grid.py  learner.py  model.py  player.py  simulator.py  temp.py  utils.py  visualizer.py
static/: env.pkl
(+27 files in other folders)
